--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,19 @@
 <body>  
 
 <p>Welcome to chat App</p>
+<script src="/socket.io/socket.io.js"></script>
+<script>
+	var socket = io();
+
+	socket.on('connect', ()=>{
+		console.log('connected to server');
+	});
+
+	socket.on('disconnect', ()=>{
+
+console.log('disconnected from server');
+	});
+</script>
 
 
 </body>
