--- a/public/index.html
+++ b/public/index.html
@@ -13,18 +13,7 @@
 
 <p>Welcome to chat App</p>
 <script src="/socket.io/socket.io.js"></script>
-<script>
-	var socket = io();
-
-	socket.on('connect', ()=>{
-		console.log('connected to server');
-	});
-
-	socket.on('disconnect', ()=>{
-
-console.log('disconnected from server');
-	});
-</script>
+<script src="/js/index.js"></script>
 
 
 </body>
