--- a/public/index.html
+++ b/public/index.html
@@ -5,24 +5,42 @@
 
 	<head> 
 <meta charset ="utf-8">
+<link rel="stylesheet" href="/css/styles.css"> </link>
 
 	</head>
 
 
-<body>  
+<body class='chat'> 
 
-<p>Welcome to chat App</p>
+<div class="chat__sidebar">
+	
+	<h3>People</h3>
+	<div id="users"></div>
 
+</div>
 
-<ol id="messages"></ol>
+<div class="chat__main">
+
+<ol id="messages" class="chat__messages"></ol>
+
+<div class="chat__footer">	
 
 <form id="message-form"> 
-<input name="message" type="text" placeholder="Message"/>
+<input name="message" type="text" placeholder="Message" autofocus autocomplete="off"/>
 <button> Send </button>
 
 </form>
 
-<button id="send-location"> Send location </button>
+<button id="send-location"> send location </button>
+
+</div>
+
+
+</div>
+
+
+
+
 <script src="/socket.io/socket.io.js"></script>
 <script src="/js/libs/jquery-3.2.1.min.js"> </script>
 <script src="/js/index.js"></script>
